--- a/UCSCBusBuddy/res/layout/activity_main.xml
+++ b/UCSCBusBuddy/res/layout/activity_main.xml
@@ -8,9 +8,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
+    <Button
+        android:id="@+id/select_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignLeft="@+id/closest_stop"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="75dp"
+        android:text="Select a Stop" />
+
+    <Button
+        android:id="@+id/closest_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Closest Stop" />
+
+    <Button
+        android:id="@+id/bus_schedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/closest_stop"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="75dp"
+        android:text="Bus Schedule" />
 
 </RelativeLayout>
