added button for user manual and uploaded dummy manual

--- a/UCSCBusBuddy/res/layout/activity_main.xml
+++ b/UCSCBusBuddy/res/layout/activity_main.xml
@@ -16,36 +16,48 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="Developed by SPARC" />
- 
-    <Button
-        android:id="@+id/closest_stop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView1"
-        android:layout_alignLeft="@+id/bus_schedule"
-        android:layout_marginBottom="80dp"
-        android:background="@drawable/mybutton"
-        android:onClick="closestStop"
-        android:text="Closest Stop" />
 
-    <Button
-        android:id="@+id/select_stop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/closest_stop"
-        android:layout_alignLeft="@+id/closest_stop"
-        android:background="@drawable/mybutton"
-        android:onClick="selectStop"
-        android:text="Select a Stop" />
+        <Button
+            android:id="@+id/select_stop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/closest_stop"
+            android:layout_alignLeft="@+id/bus_schedule"
+            android:background="@drawable/mybutton"
+            android:onClick="selectStop"
+            android:text="Select a Stop" />
 
-    <Button
-        android:id="@+id/bus_schedule"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/select_stop"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/mybutton"
-        android:onClick="busSchedule"
-        android:text="Bus Schedule" />
+        <Button
+            android:id="@+id/bus_schedule"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/select_stop"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/mybutton"
+            android:onClick="busSchedule"
+            android:text="Bus Schedule" />
 
+        <Button
+            android:id="@+id/closest_stop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/manual"
+            android:layout_alignLeft="@+id/select_stop"
+            android:layout_marginBottom="34dp"
+            android:background="@drawable/mybutton"
+            android:onClick="closestStop"
+            android:text="Closest Stop" />
+
+        <Button
+            android:id="@+id/manual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView1"
+            android:layout_alignLeft="@+id/closest_stop"
+            android:layout_alignRight="@+id/closest_stop"
+            android:layout_marginBottom="27dp"
+            android:background="@drawable/mybutton"
+            android:onClick="getManual"
+            android:text="User Manual" />
+    
 </RelativeLayout>
