--- a/UCSCBusBuddy/res/layout/activity_stop_info.xml
+++ b/UCSCBusBuddy/res/layout/activity_stop_info.xml
@@ -14,7 +14,7 @@
             android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:layout_weight=".30"
-            class="com.google.android.gms.maps.MapFragment" />
+            class="com.google.android.gms.maps.SupportMapFragment" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -22,11 +22,12 @@
             android:layout_weight=".70"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Developed by SPARC" />
+                <android.support.v4.view.ViewPager
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            
         </LinearLayout>
     </LinearLayout>
 
