re-added stuff to stop info page

--- a/UCSCBusBuddy/res/layout/activity_stop_info.xml
+++ b/UCSCBusBuddy/res/layout/activity_stop_info.xml
@@ -1,12 +1,8 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true" >
-
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:background="#D5FFFF"
         android:orientation="vertical" >
 
         <fragment
@@ -30,5 +26,3 @@
             
         </LinearLayout>
     </LinearLayout>
-
-</ScrollView>
