- Gets an accurate location from user, even without WiFi being on

--- a/UCSCBusBuddy/res/layout/activity_bus_schedule.xml
+++ b/UCSCBusBuddy/res/layout/activity_bus_schedule.xml
@@ -83,6 +83,6 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/mybutton"
         android:onClick="getNC"
-        android:text="NC" />
+        android:text="Night Core" />
 
 </RelativeLayout>
